--- a/AppSettingsDummy/App.config
+++ b/AppSettingsDummy/App.config
@@ -10,12 +10,13 @@
     </startup>
     <applicationSettings>
         <AppSettingsDummy.Properties.Settings>
-            <setting name="DefaultEmployee" serializeAs="Xml">
+            <setting name="JohanXml" serializeAs="Xml">
                 <value>
-                    <Employee xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-                        <Name>Andreas</Name>
-                        <Position>Top</Position>
-                    </Employee>
+                    <XmlPerson xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <Name>JohanXml</Name>
+                        <Age>34</Age>
+                    </XmlPerson>
                 </value>
             </setting>
         </AppSettingsDummy.Properties.Settings>
