--- a/AppSettingsDummy/AppSettingsDummy.csproj
+++ b/AppSettingsDummy/AppSettingsDummy.csproj
@@ -55,7 +55,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="RoomConverter.cs" />
+    <Compile Include="PersonConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -65,8 +65,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DummyVm.cs" />
-    <Compile Include="Room.cs" />
-    <Compile Include="Employee.cs" />
+    <Compile Include="ConverterPerson.cs" />
+    <Compile Include="SettingsExt.cs" />
+    <Compile Include="XmlPerson.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
