still failing to save

--- a/AppSettingsDummy/App.config
+++ b/AppSettingsDummy/App.config
@@ -19,6 +19,9 @@
                     </XmlPerson>
                 </value>
             </setting>
+            <setting name="DummyString" serializeAs="String">
+                <value>Dummy string</value>
+            </setting>
         </AppSettingsDummy.Properties.Settings>
     </applicationSettings>
 </configuration>
