added ListOfPersons not very nice. Works without     [SettingsSerializeAs(SettingsSerializeAs.Xml)]

--- a/AppSettingsDummy/App.config
+++ b/AppSettingsDummy/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="AppSettingsDummy.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AppSettingsDummy.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -24,4 +27,27 @@
             </setting>
         </AppSettingsDummy.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <AppSettingsDummy.Properties.Settings>
+            <setting name="ListOfPersons" serializeAs="Xml">
+                <value>
+                    <ArrayOfXmlPerson xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <XmlPerson>
+                            <Name>JohanXml</Name>
+                            <Age>34</Age>
+                        </XmlPerson>
+                        <XmlPerson>
+                            <Name>Travis</Name>
+                            <Age>34</Age>
+                        </XmlPerson>
+                        <XmlPerson>
+                            <Name>Drch</Name>
+                            <Age>34</Age>
+                        </XmlPerson>
+                    </ArrayOfXmlPerson>
+                </value>
+            </setting>
+        </AppSettingsDummy.Properties.Settings>
+    </userSettings>
 </configuration>
