--- a/AppSettingsDummy/Properties/Settings.settings
+++ b/AppSettingsDummy/Properties/Settings.settings
@@ -16,7 +16,7 @@
                     &lt;/XmlPerson&gt;
                 </Value>
     </Setting>
-    <Setting Name="ListOfPersons" Type="AppSettingsDummy.ListOfPersons" Scope="User">
+    <Setting Name="ListOfPersons" Type="AppSettingsDummy.ListOfPersons" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;ArrayOfXmlPerson xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;&lt;XmlPerson&gt;&lt;Name&gt;JohanXml&lt;/Name&gt;&lt;Age&gt;34&lt;/Age&gt;&lt;/XmlPerson&gt;&lt;XmlPerson&gt;&lt;Name&gt;Travis&lt;/Name&gt;&lt;Age&gt;34&lt;/Age&gt;&lt;/XmlPerson&gt;&lt;XmlPerson&gt;&lt;Name&gt;Drch&lt;/Name&gt;&lt;Age&gt;34&lt;/Age&gt;&lt;/XmlPerson&gt;&lt;/ArrayOfXmlPerson&gt;</Value>
     </Setting>
   </Settings>
