The type specified for the setting does not play nice with refactoring :(

--- a/AppSettingsDummy/App.config
+++ b/AppSettingsDummy/App.config
@@ -22,10 +22,10 @@
                     </XmlPerson>
                 </value>
             </setting>
-            <setting name="ListOfPersons" serializeAs="Xml">
+            <setting name="Persons" serializeAs="Xml">
                 <value>
-                    <ArrayOfXmlPerson xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-                        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                    <ArrayOfXmlPerson xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <XmlPerson>
                             <Name>JohanXml</Name>
                             <Age>34</Age>
