--- a/AppSettingsDummy/Properties/Settings.settings
+++ b/AppSettingsDummy/Properties/Settings.settings
@@ -16,8 +16,22 @@
                     &lt;/XmlPerson&gt;
                 </Value>
     </Setting>
-    <Setting Name="ListOfPersons" Type="AppSettingsDummy.ListOfPersons" Scope="Application">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;ArrayOfXmlPerson xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;&lt;XmlPerson&gt;&lt;Name&gt;JohanXml&lt;/Name&gt;&lt;Age&gt;34&lt;/Age&gt;&lt;/XmlPerson&gt;&lt;XmlPerson&gt;&lt;Name&gt;Travis&lt;/Name&gt;&lt;Age&gt;34&lt;/Age&gt;&lt;/XmlPerson&gt;&lt;XmlPerson&gt;&lt;Name&gt;Drch&lt;/Name&gt;&lt;Age&gt;34&lt;/Age&gt;&lt;/XmlPerson&gt;&lt;/ArrayOfXmlPerson&gt;</Value>
+    <Setting Name="Persons" Type="AppSettingsDummy.Persons" Scope="Application">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfXmlPerson xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;XmlPerson&gt;
+    &lt;Name&gt;JohanXml&lt;/Name&gt;
+    &lt;Age&gt;34&lt;/Age&gt;
+  &lt;/XmlPerson&gt;
+  &lt;XmlPerson&gt;
+    &lt;Name&gt;Travis&lt;/Name&gt;
+    &lt;Age&gt;34&lt;/Age&gt;
+  &lt;/XmlPerson&gt;
+  &lt;XmlPerson&gt;
+    &lt;Name&gt;Drch&lt;/Name&gt;
+    &lt;Age&gt;34&lt;/Age&gt;
+  &lt;/XmlPerson&gt;
+&lt;/ArrayOfXmlPerson&gt;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
